--- a/images.html - Copy (3)/index.html
+++ b/images.html - Copy (3)/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.Css">
-    <title>assignment5.html</title>
+    <title>assignment.html</title>
 </head>
 <body style="background-color: gold;">
     <div class="main">
      <div class="header"></div>
       <h1>LEMME HELP</h1>
-       <ul class="nav">  
 
+      <ul class="nav">  
+      
           <li> <a href="index.html"> Home |</a> </li>
           <li>  <a href="about.html">About Us|</a> </li>
           <li> <a href="preventions.html">Prevention |</a> </li>
