--- a/images.html - Copy (3)/about.html
+++ b/images.html - Copy (3)/about.html
@@ -59,6 +59,8 @@ national spread of COVID-19.</p>
  <p>   If you are passionate about making a difference in people’s lives, we’d love to have you join our team of
 dedicated volunteers!</p> <br>
 <a href="preventions.html"><u> See our current opportunities</u></a>  
+<br> <br>
+<a href="preventions.html">NEXT PAGE</a>
       </div>
        <div class="footer">
         Copyright@lemmehelp.com &nbsp;| All Rights Reserved
