--- a/images.html - Copy (3)/index.html
+++ b/images.html - Copy (3)/index.html
@@ -14,9 +14,9 @@
 
       <ul class="nav">  
       
-          <li> <a href="index.html"> Home |</a> </li>
-          <li>  <a href="about.html">About Us|</a> </li>
-          <li> <a href="preventions.html">Prevention |</a> </li>
+          <li> <a href="index.html"> Home   |</a> </li>
+          <li>  <a href="about.html">About Us  |</a> </li>
+          <li> <a href="preventions.html">Prevention  |</a> </li>
           <li> <a href="mailto:jonathandahn0@gmail.com"> Email us</a> </li>
        </ul>
       <img class="banner"src="banner.jpg" alt="airport">
@@ -42,6 +42,8 @@
         at scale through the Helping Hands Community platform, while we connect
         individuals who need help and can offer help through our website.
     </p>
+     <br> <br>
+    <a href="about.html">NEXT PAGE</a>
       </div>
        <div class="footer">
         Copyright@lemmehelp.com &nbsp;| All Rights Reserved
