--- a/images.html - Copy (3)/preventions.html
+++ b/images.html - Copy (3)/preventions.html
@@ -163,7 +163,8 @@ and let them know you may have COVID-19.</p>
 
 
 <a href="#"> BACK TO TOP</a>
-
+<br> <br>
+<a href="index.html">BACK TO HOME</a>
 
       </div>
        <div class="footer">
