--- a/Assignment6.html/index.html
+++ b/Assignment6.html/index.html
@@ -21,6 +21,8 @@
 
 
         </ul>
+<!-- This is my last html assignment -->
+
         <br><br>
         <h1>Can Vaccinated People Transmit COVID-19 to
             Others?</h1> 
